--- a/Front/src/app/main/community/community-detail/community-detail.component.css
+++ b/Front/src/app/main/community/community-detail/community-detail.component.css
@@ -44,6 +44,11 @@ o-grid {
   row-gap: 10px;
 }
 
+.no-link-style {
+  text-decoration: none; /* Elimina el subrayado */
+  color: inherit; 
+}
+
 .container-item {
   margin-top: 0;
   display: block;
