--- a/Front/src/app/main/towns/towns-home/towns-home.component.css
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.css
@@ -52,6 +52,11 @@ o-grid {
 
 }
 
+.no-link-style {
+  text-decoration: none; /* Elimina el subrayado */
+  color: inherit; 
+}
+
 .grid-container { 
   overflow: hidden;
 }
