--- a/Front/src/app/main/towns/towns-home/towns-home.component.html
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.html
@@ -10,18 +10,17 @@
         <div class="filter-style" fxLayout="column">
           <div fxLayout="row wrap" fxLayout="32px" class="buttons-container">
               <!-- Combo para Provincias -->
-              <o-combo #provinceCombo attr="provinceCombo" service="provinces" entity="province" keys="id_province"
-                      columns="province_name;id_province" value-column="province_name" visible-columns="province_name"
-                      read-only="no" class="input-combo" fxFlex="35%" sort="ASC" searchable="true" query-method="query"
-                      placeholder="province_name" label-visible="false">
+              <o-combo #provinceCombo attr="provinceCombo" service="provinces" entity="province" keys="id_province" placeholder="province_name"
+                    query-method="query" columns="id_province;province_name;id_town" value-column="province_name" visible-columns="province_name"
+                    read-only="no" fxFlex="35%" sort="ASC" searchable="true" label-visible="false">
               </o-combo>
               <!-- Combo para Ciudades -->
-              <o-combo #townCombo attr="townCombo" service="towns" entity="town" keys="id_town"
-                            columns="town_name;id_town;id_province" visible-columns="town_name" value-column="town_name"
-                            class="input-combo" fxFlex="75%" sort="ASC" searchable="true" query-method="query"
-                            placeholder="town_name" label-visible="false" [query-on-event]="provinceCombo.onValueChange" parent-keys="id_province:provinceCombo[id_province]">
+              <o-combo #townCombo attr="townCombo" service="towns" entity="town" keys="id_town" placeholder="town_name"
+                            columns="id_town;town_name;id_province" visible-columns="town_name" value-column="town_name"
+                            fxFlex="35%" sort="ASC" searchable="true" query-method="query" label-visible="false"
+                            [query-on-event]="provinceCombo.onValueChange" parent-keys="id_province:provinceCombo[id_province]">
               </o-combo>
-              <!-- Botones del filtro -->
+              <!--Botones del filtro -->
               <div class="buttons-container">
                 <o-button attr="filter-button" icon="search" type="STROKED" class="input-search" [oFilterBuilderQuery]="filterBuilder"
                           fxFlex="5%" color="primary">
@@ -31,7 +30,7 @@
                 </o-button>
               </div>
               <!-- oFilterBuilder para el filtrado -->
-              <o-filter-builder #filterBuilder attr="thefilter" filters="town_name;province_name"
+              <o-filter-builder #filterBuilder attr="thefilter" filters="provinceCombo;townCombo"
                                 [target]="grid" query-on-change="no" [expression-builder]="createFilter">
               </o-filter-builder>
           </div>
@@ -45,18 +44,19 @@
         <div class="grid-container">
             <o-grid-item class="townCard" *ngFor="let list of grid.dataArray">
                 <o-column class="container-item">
-                    <div>
-                        <a [routerLink]="['/main/towns', list.id_town]">
+                    <a [routerLink]="['/main/towns', list.id_town]" class="no-link-style">
+                        <div class="image-container">
                             <img src="{{ getImagePath(list.town_name) }}" alt="{{ list.town_name }}" class="town-image">
-                        </a>
-                    </div>
-                    <div class="town-data">     
-                        <div class="town-name">{{ list.town_name }}</div>
-                        <div class="province-name">{{ list.province_name }}</div>
-                        <div class="host-amount">
-                            <span class="material-symbols-outlined">person_pin_circle</span> {{ list.hostamount }}
+                            
                         </div>
-                    </div>
+                        <div class="town-data">     
+                            <div class="town-name">{{ list.town_name }}</div>
+                            <div class="province-name">{{ list.province_name }}</div>
+                            <div class="host-amount">
+                                <span class="material-symbols-outlined">person_pin_circle</span>{{ list.hostamount }}
+                            </div>
+                        </div>
+                    </a>
                 </o-column>
             </o-grid-item>
         </div>
