Perfil + Traducción Intereses

--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.html
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.html
@@ -61,7 +61,7 @@
                         <mat-chip-list class="activities-chip-list">
                             <mat-chip class="activitiesChip" *ngFor="let activity of splitActivities(list.activities)"
                                 [disabled]="false" color="primary">
-                                {{ activity }}
+                                {{ activity | oTranslate }}
                             </mat-chip>
                         </mat-chip-list>
                     </div>
