--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
@@ -50,7 +50,7 @@
               <mat-chip-list class="activities-chip-list">
                 <mat-chip class="activitiesChip" *ngFor="let activity of arrayActivitiesClient" [disabled]="false"
                   color="primary">
-                  {{ activity }}
+                  {{ activity | oTranslate }}
                 </mat-chip>
               </mat-chip-list>
             </o-column>
