--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.css
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.css
@@ -74,6 +74,8 @@ o-grid {
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    margin-top: 10px;
 }
 
 .activities-chip-list {
