--- a/Front/src/app/main/community/community-detail/community-detail.component.html
+++ b/Front/src/app/main/community/community-detail/community-detail.component.html
@@ -1,20 +1,21 @@
-<!-- <a [routerLink]="['../../communities']"> -->
-<button mat-flat-button [routerLink]="['../../communities']">
-    <mat-icon>arrow_back_ios_new</mat-icon>
-    {{'BACKBTN' | oTranslate}}
-</button>
-<!-- </a> -->
-
 <o-form #form fxLayout="column" service="communities" entity="community" keys="id_community" show-header="no" (onDataLoaded)="onLoad()">
     <o-text-input attr="id_community" sql-type="INTEGER" enabled="no" oHidden></o-text-input>
     <o-text-input #communitynamefield attr="community_name" enabled="no" (onValueChange)="reloadValues($event)"
         oHidden></o-text-input>
+    
+    <div fxLayout="row" fxLayoutAlign="start center">
+        <button mat-flat-button [routerLink]="['../../communities']">
+                <mat-icon>arrow_back_ios_new</mat-icon>
+                {{'BACKBTN' | oTranslate}}
+        </button>
+    </div>
+
     <h1 class="community-title">{{ custom_name }}</h1>
 
     <o-grid #grid columns="id_town;id_community;town_name;province_name" quick-filter-columns="town_name;province_name" fixed-header="no"
-        service="towns" entity="town" keys="id_town" parent-keys="id_community" [cols]="5" grid-item-height="2:3"
-        show-page-size="false" refresh-button="false" pagination-controls="true" controls="false" query-rows="20" page-size-options="10;20;40"
-        sortable-columns="town_name" sort-column="town_name" gutter-size="10px" [ngStyle]="{'height':'600px'}" >
+        service="towns" entity="town" keys="id_town" parent-keys="id_community" [cols]="5" grid-item-height="2:3" quick-filter="no" 
+        refresh-button="false" controls="false" show-page-size="false" pagination-controls="true" page-size-options="10;20;40"
+        sortable-columns="town_name" sort-column="town_name" gutter-size="10px" [ngStyle]="{'height':'auto'}" show-footer="no">
 
         <div class="grid-container">
             <o-grid-item class="townCard" *ngFor="let list of grid.dataArray">
