--- a/Front/src/app/main/towns/towns-home/towns-home.component.html
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.html
@@ -1,9 +1,11 @@
-<button mat-flat-button [routerLink]="['../../communities']">
-  <mat-icon>arrow_back_ios_new</mat-icon>
-  {{'BACKBTN' | oTranslate}}
-</button>
-
-  <o-form #form fxFill fxLayout="column" show-header="no" horizontal-scroll="false" virtual-scroll="no">
+<o-form #form fxLayout="column" width="auto" show-header="no">
+    
+    <div fxLayout="row" fxLayoutAlign="start center">
+        <button mat-flat-button [routerLink]="['../../communities']">
+            <mat-icon>arrow_back_ios_new</mat-icon>
+            {{'BACKBTN' | oTranslate}}
+        </button>
+    </div>
 
     <h2 class="towns-home">{{'CHOOSEDESTINATIONMSSG' | oTranslate}}</h2>
     
@@ -36,30 +38,30 @@
           </div>
         </div>
 
-        <o-grid #grid columns="id_town;town_name;province_name" quick-filter="no" fixed-header="no"
-        service="towns" entity="town" keys="id_town" [cols]="5" grid-item-height="2:3" controls="false"
-        refresh-button="false" show-page-size="true" page-size-options="10;15;20" pagination-controls="true" show-buttons-text="no"
-        sortable-columns="town_name" sort-column="town_name" gutter-size="10px" [ngStyle]="{'height':'auto'}" >
+        <o-grid #grid columns="id_town;town_name;province_name" service="towns" entity="town" keys="id_town"
+            quick-filter="no" [cols]="5" grid-item-height="2:3" controls="false" refresh-button="false"
+            show-page-size="true" page-size-options="10;15;20" pagination-controls="true" show-buttons-text="no"
+            sortable-columns="town_name" sort-column="town_name" gutter-size="10px" [ngStyle]="{'height':'auto'}" >
 
-        <div class="grid-container">
-            <o-grid-item class="townCard" *ngFor="let list of grid.dataArray">
-                <o-column class="container-item">
-                    <a [routerLink]="['/main/towns', list.id_town]" class="no-link-style">
-                        <div class="image-container">
-                            <img src="{{ getImagePath(list.town_name) }}" alt="{{ list.town_name }}" class="town-image">
-                            
-                        </div>
-                        <div class="town-data">     
-                            <div class="town-name">{{ list.town_name }}</div>
-                            <div class="province-name">{{ list.province_name }}</div>
-                            <div class="host-amount">
-                                <span class="material-symbols-outlined">person_pin_circle</span>{{ list.hostamount }}
+            <div class="grid-container">
+                <o-grid-item class="townCard" *ngFor="let list of grid.dataArray">
+                    <o-column class="container-item">
+                        <a [routerLink]="['/main/towns', list.id_town]" class="no-link-style">
+                            <div class="image-container">
+                                <img src="{{ getImagePath(list.town_name) }}" alt="{{ list.town_name }}" class="town-image">
+                                
                             </div>
-                        </div>
-                    </a>
-                </o-column>
-            </o-grid-item>
-        </div>
+                            <div class="town-data">     
+                                <div class="town-name">{{ list.town_name }}</div>
+                                <div class="province-name">{{ list.province_name }}</div>
+                                <div class="host-amount">
+                                    <span class="material-symbols-outlined">person_pin_circle</span>{{ list.hostamount }}
+                                </div>
+                            </div>
+                        </a>
+                    </o-column>
+                </o-grid-item>
+            </div>
     </o-grid>
 </o-form>
 
