--- a/Front/src/app/main/home/home.component.scss
+++ b/Front/src/app/main/home/home.component.scss
@@ -32,3 +32,68 @@
     z-index: 1; /* Coloca el logotipo delante de la imagen de fondo */
   
 }
+
+o-grid {
+  row-gap: 10px;
+
+}
+
+.no-link-style {
+  text-decoration: none; /* Elimina el subrayado */
+  color: inherit; 
+}
+
+.grid-container { 
+  overflow: hidden;
+}
+
+.container-item {
+  margin-top: 0;
+  display: block;
+  position: absolute;
+  width: 90%;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  overflow: auto;
+  overflow: hidden;
+}
+
+.town-image {
+    width: 100%; 
+    max-height: 220px; 
+    object-fit: cover;
+  }
+  
+.town-name {
+    font-weight: bold;
+    font-size: 1.1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding: 4px 0;
+    text-align: center
+  }
+  
+.province-name {
+    font-size: 0.8em;
+    text-align: center;
+    margin-bottom: 6px;
+  }
+
+  .material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+    margin-bottom: 6px;
+  }
+
+  .host-amount {
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    margin-bottom: 5px;
+  }
