Rango de fechas (back y front)

--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation.component.css
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation.component.css
@@ -28,7 +28,7 @@
     margin-left: 20px;
     margin-bottom: 18px;   
 }
-o-date-input, o-textarea-input{
+o-date-input, o-textarea-input, o-daterange-input{
     margin-bottom: 15px;
     margin-left: 25px;   
 }
