--- a/Front/src/app/main/reservations/reservation-home/reservation-home.component.html
+++ b/Front/src/app/main/reservations/reservation-home/reservation-home.component.html
@@ -13,7 +13,7 @@
 
 
             <o-grid #gridReservationReceived attr="reservationReceived" service="users" entity="reservationReceived"
-                columns="read_host;id_reservation;id_client_traveler;id_client_host;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
+                columns="read_host;id_reservation;id_client_traveler;id_client_host;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date;reservation_end;reservation_start"
                 query-rows="8" refresh-button="no" quick-filter="true"
                 quick-filter-columns="name_traveler;surname_traveler;message;status_name;read_host"
                 visible-columns="name_host;message;status_name;reservation_date;read_host" [cols]="1" grid-item-height="60px"
@@ -32,7 +32,15 @@
 
                             <div class="itemrow2">
                                 <div class="date">{{'Reservation Date' | oTranslate}}</div>
-                                <div class="dateFormat">{{ list.reservation_date | date: 'dd/MM/yyyy' }}</div>
+                                <div class="dateFormat">{{ list.reservation_date | date: 'dd/MM/yyyy' }}</div>                                
+                            </div>
+                            <div class="itemrow2">
+                                <!-- <div class="date">{{'Reservation Start' | oTranslate}}</div> -->
+                                <div class="dateFormat">{{ list.reservation_start | date: 'dd/MM/yyyy' }}</div>                                
+                            </div>
+                            <div class="itemrow2">
+                                <!-- <div class="date">{{'Reservation Date' | oTranslate}}</div> -->
+                                <div class="dateFormat">{{ list.reservation_end | date: 'dd/MM/yyyy' }}</div>                                
                             </div>
 
                             <div class="itemrow3">
@@ -69,7 +77,7 @@
             </o-grid>
 
             <o-grid #gridReservationSent attr="reservationSent" service="users" entity="reservationSent"
-                columns="read_traveler;id_reservation;name_traveler;id_client_traveler;id_client_host;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
+                columns="read_traveler;id_reservation;name_traveler;id_client_traveler;id_client_host;surname_traveler;name_host;surname_host;message;status_name;reservation_date;reservation_start;reservation_end"
                 query-rows="8" refresh-button="no" quick-filter="true"
                 visible-columns="name_host;message;status_name;reservation_date;read_traveler" [cols]="1" grid-item-height="60px"
                 gutter-size="6px" show-footer="no">
@@ -89,6 +97,14 @@
                             <div class="itemrow2">
                                 <div class="date">{{'Reservation Date' | oTranslate}}</div>
                                 <div class="dateFormat">{{ list.reservation_date | date: 'dd/MM/yyyy' }}</div>
+                            </div>
+                            <div class="itemrow2">
+                                <!-- <div class="date">{{'Reservation Start' | oTranslate}}</div> -->
+                                <div class="dateFormat">{{ list.reservation_start | date: 'dd/MM/yyyy' }}</div>                                
+                            </div>
+                            <div class="itemrow2">
+                                <!-- <div class="date">{{'Reservation Date' | oTranslate}}</div> -->
+                                <div class="dateFormat">{{ list.reservation_end | date: 'dd/MM/yyyy' }}</div>                                
                             </div>
 
                             <div class="itemrow3">
